sgd/reproduction/playground/objects/SVMXC__Service_Group_Members__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Service Group enables definition of your entire service organization. Service group definition includes details of group members, products in which the group specializes in, the skills available in the group, typical service delivery costs as well as geographies covered by the group.</description>
    <fields>
        <fullName>SMAX_PS_Abolished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>廃棄</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_AssetNo__c</fullName>
        <label>固定資産番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Category__c</fullName>
        <label>区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technician</fullName>
                    <label>技術者</label>
                </value>
                <value>
                    <fullName>InspectionEq</fullName>
                    <label>検査機器</label>
                </value>
                <value>
                    <fullName>Jig</fullName>
                    <label>治具</label>
                </value>
                <value>
                    <fullName>Alternative</fullName>
                    <label>代替機</label>
                </value>
                <value>
                    <fullName>Cylinder</fullName>
                    <label>ボンベ</label>
                </value>
                <value>
                    <fullName>CompanyCar</fullName>
                    <label>社有車</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Characterstics__c</fullName>
        <label>特性</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1001</fullName>
                    <label>可燃性</label>
                </value>
                <value>
                    <fullName>1002</fullName>
                    <label>毒性</label>
                </value>
                <value>
                    <fullName>1003</fullName>
                    <label>可燃性毒性</label>
                </value>
                <value>
                    <fullName>1004</fullName>
                    <label>支燃性</label>
                </value>
                <value>
                    <fullName>1005</fullName>
                    <label>不活性</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Concentration__c</fullName>
        <label>濃度</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Container_Number__c</fullName>
        <label>容器No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Container_Volume__c</fullName>
        <label>容器容量</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Cylinder_Status_Icon__c</fullName>
        <formula>CASE(SMAX_PS_Cylinder_Status__c, 
&quot;Available&quot;, &quot;🟢　使用可&quot;, 
&quot;Maintenance&quot;, &quot;⚫　整備中&quot;, 
&quot;Booked&quot;, &quot;🟡　使用予定&quot;, 
&quot;🔴　使用中&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ボンベステータスアイコン</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Cylinder_Status__c</fullName>
        <label>ボンベステータス</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <label>🟢　使用可</label>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                    <label>⚫　整備中</label>
                </value>
                <value>
                    <fullName>Booked</fullName>
                    <label>🟡　使用予定</label>
                </value>
                <value>
                    <fullName>Using</fullName>
                    <label>🔴　使用中</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_EquipmentMaker__c</fullName>
        <label>メーカー</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EquipmentModel__c</fullName>
        <label>型式</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Gas_Type__c</fullName>
        <label>ガス種</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Laws_Regulation__c</fullName>
        <label>法規制</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Lend_Date__c</fullName>
        <label>貸出日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Lend_Request_Date__c</fullName>
        <label>貸出要求日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Lend_Status_Icon__c</fullName>
        <formula>CASE(SMAX_PS_Lend_Status__c, 
&quot;Available&quot;, &quot;🟢　貸出可&quot;, 
&quot;Maintenance&quot;, &quot;⚫　整備中&quot;, 
&quot;Booked&quot;, &quot;🟡　予約中&quot;, 
&quot;🔴　貸出中&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>貸出ステータスアイコン</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Lend_Status__c</fullName>
        <label>貸出ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <label>🟢　貸出可</label>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                    <label>⚫　整備中</label>
                </value>
                <value>
                    <fullName>Booked</fullName>
                    <label>🟡　予約中</label>
                </value>
                <value>
                    <fullName>Rented</fullName>
                    <label>🔴　貸出中</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Lend_To_Contact__c</fullName>
        <label>貸出先担当者名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Lend_To_Phone__c</fullName>
        <label>貸出先電話番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Lend_To_Sales_Office__c</fullName>
        <label>貸出先営業所</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Lend_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>貸出先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Technician/Equipment</relationshipLabel>
        <relationshipName>Technician_Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Manage_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>管理担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technician_Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ManagedNo__c</fullName>
        <label>管理No.(設備番号)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Mobile_Email__c</fullName>
        <label>携帯メール</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Mobile_Phone__c</fullName>
        <label>携帯電話</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Next_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>次使用予定者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technician_Equipment1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Office_Extenstion__c</fullName>
        <label>社内内線</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Place__c</fullName>
        <label>設置場所</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Purchase_Amount__c</fullName>
        <label>購入金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Purchased_From__c</fullName>
        <label>購入先</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Reference_URL__c</fullName>
        <label>参照URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Remain_Status_Icon__c</fullName>
        <formula>IF(SMAX_PS_Remain_Volume__c &gt; SMAX_PS_Warning_Volume__c, &quot;🟢　&quot; + TEXT(SMAX_PS_Warning_Volume__c) + &quot;以上&quot;, &quot;🔴　&quot; + TEXT(SMAX_PS_Warning_Volume__c) + &quot;未満&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>残量ステータス</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Remain_Volume__c</fullName>
        <label>残量</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Return_Date__c</fullName>
        <label>返却日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Return_Planned_Date__c</fullName>
        <label>返却予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_Item_Code__c</fullName>
        <label>SAP品目コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesGroup_Text__c</fullName>
        <formula>CASE(SMAX_PS_SAP_SalesGroup__c,
  &quot;J78&quot;, &quot;HTS 国内&quot;,
  &quot;J79&quot;, &quot;HTS 海外&quot;,
  &quot;J80&quot;, &quot;HTS なし&quot;,
  &quot;JF6&quot;, &quot;HTS 自動車&quot;,
  &quot;JF7&quot;, &quot;HTS 環境&quot;,
  &quot;JF8&quot;, &quot;HTS 半導体&quot;,  
  &quot;JF9&quot;, &quot;HTS 科学&quot;,
  &quot;JG0&quot;, &quot;HTS 医用&quot;,
  &quot;JK7&quot;, &quot;HTS EURO HUB&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>サービス営業Gr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_SalesGroup__c</fullName>
        <label>サービス営業Gr</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesGroup</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Segment__c</fullName>
        <label>セグメント</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Serial__c</fullName>
        <label>シリアルNo.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Shelf_Number__c</fullName>
        <label>棚番</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Specification__c</fullName>
        <label>仕様</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Tech_Equipment__c</fullName>
        <label>技術者/機器</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Test_Date__c</fullName>
        <label>検定日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Trade_Control__c</fullName>
        <label>貿管令該当</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_UserEmail__c</fullName>
        <formula>SVMXC__Salesforce_User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ユーザメール</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>使用者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technician_Equipment2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Valid_Up_To__c</fullName>
        <label>有効期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Warning_Volume__c</fullName>
        <label>警告残量</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag indicates if this member is active and available for service order assignments. This flag does not drive any functionality in ServiceMax and is for informational purposes only</description>
        <inlineHelpText>Flag indicates if this member is active and available for service order assignments. This flag does not drive any functionality in ServiceMax and is for informational purposes only</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Average_Drive_Time__c</fullName>
        <label>Average Drive Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Average_Speed__c</fullName>
        <description>Average traveling speed for the technician</description>
        <label>Average Speed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Break_Duration__c</fullName>
        <description>Duration of technician&apos;s break in minutes</description>
        <label>Break Duration</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Break_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Break hours applicable to the technician. Reference to an existing Business Hours record in Salesforce</description>
        <label>Break Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Technician/Equipment (Break Hours)</relationshipLabel>
        <relationshipName>Service_Group_Members2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Break_Type__c</fullName>
        <description>Type of break: Fixed or Floating. Not used</description>
        <label>Break Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Time Window</fullName>
                    <default>true</default>
                    <label>Time Window</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__City__c</fullName>
        <description>“City” part of the technician&apos;s address</description>
        <inlineHelpText>“City” part of the technician&apos;s address</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Country__c</fullName>
        <description>“Country” part of the technician&apos;s address</description>
        <inlineHelpText>“Country” part of the technician&apos;s address</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Ayerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bouvet</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Email__c</fullName>
        <description>Email of the technician</description>
        <inlineHelpText>Email of the technician</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SVMXC__Enable_Scheduling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the technician&apos;s calendar must be managed by ServiceMax. Applies to third-party technicians and equipment that are not linked to a Salesforce user</description>
        <label>Enable Scheduling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Fixed_Cost__c</fullName>
        <description>Any fixed costs associated with the technician for each day of work order activity. Used in dispatch optimization</description>
        <label>Fixed Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Inventory_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Technician&apos;s inventory location</description>
        <label>Inventory Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Technician/Equipment</relationshipLabel>
        <relationshipName>Service_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Latitude_Home__c</fullName>
        <description>Home address location north or south of the equator.</description>
        <inlineHelpText>自宅住所 赤道南北の位置。</inlineHelpText>
        <label>Home Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Latitude__c</fullName>
        <description>Address location north or south of the equator.</description>
        <inlineHelpText>Address location north or south of the equator.</inlineHelpText>
        <label>Current Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Latlong_Captured_On__c</fullName>
        <description>Used to to capture the Time stamp when Current Lat/Long was updated on technician record.</description>
        <label>Latlong Captured On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Longitude_Home__c</fullName>
        <description>Home address east west geographic coordinate measurement.</description>
        <inlineHelpText>自宅住所 東西の地理的座標測定。</inlineHelpText>
        <label>Home Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Longitude__c</fullName>
        <description>East west geographic coordinate measurement.</description>
        <inlineHelpText>East west geographic coordinate measurement.</inlineHelpText>
        <label>Current Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Max_Daily_Hours__c</fullName>
        <description>Limits on number of hours of work order activity per day. Though this option is available, it is recommended to use business hours and break hours to indicate technician’s availability. Used in dispatch optimization</description>
        <label>Max Daily Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Max_Distance__c</fullName>
        <description>Distance if the technician cannot travel beyond this limit on a given route. Used in dispatch optimization</description>
        <label>Max Distance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Max_Hours__c</fullName>
        <label>Max Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Member_information__c</fullName>
        <description>Additional information about the member relevant to service delivery</description>
        <inlineHelpText>Additional information about the member relevant to service delivery</inlineHelpText>
        <label>Member information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Optimizer_External_ID__c</fullName>
        <description>Some identifier from the external scheduling optimizer to link the Technician</description>
        <externalId>true</externalId>
        <inlineHelpText>Some identifier from the external scheduling optimizer to link the Technician</inlineHelpText>
        <label>Optimizer External Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Overtime_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Overtime hours applicable to the technician. Reference to an existing Business Hours record in Salesforce</description>
        <label>Overtime Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Technician/Equipment (Overtime Hours)</relationshipLabel>
        <relationshipName>Service_Group_Members3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Per_Hour_Cost__c</fullName>
        <description>Average cost of technician’s time. Used in dispatch optimization</description>
        <label>Per Hour Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Per_Mile_Cost__c</fullName>
        <description>Average travel cost per mile for the technician. Used in dispatch optimization</description>
        <label>Per Mile Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Phone__c</fullName>
        <description>Telephone number of the technician</description>
        <inlineHelpText>Telephone number of the technician</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SVMXC__Role__c</fullName>
        <description>Role of the member in the group.</description>
        <inlineHelpText>Role of the member in the group.</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1001</fullName>
                    <label>SS長</label>
                </value>
                <value>
                    <fullName>1002</fullName>
                    <label>サービスマネージャー</label>
                </value>
                <value>
                    <fullName>1003</fullName>
                    <label>サービスエンジニア</label>
                </value>
                <value>
                    <fullName>1004</fullName>
                    <label>担当リーダー</label>
                </value>
                <value>
                    <fullName>1005</fullName>
                    <label>パートナー</label>
                </value>
                <value>
                    <fullName>1006</fullName>
                    <label>テクニカルサポート</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Overnight_Stay_Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up field for overnight policy in the technician object</description>
        <inlineHelpText>look up field for overnight policy in the technician object</inlineHelpText>
        <label>Overnight Stay Policy</label>
        <referenceTo>SVMXC__SM_Overnight_Stay_Policy__c</referenceTo>
        <relationshipLabel>Technician/Equipment</relationshipLabel>
        <relationshipName>Technician_Equipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to an existing salesforce User.</description>
        <inlineHelpText>Lookup to an existing salesforce User.</inlineHelpText>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used in ServiceMax screens to manage record selection</description>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Group__c</fullName>
        <description>Name of the service group. Is a lookup to an existing service group in ServiceMax</description>
        <inlineHelpText>Name of the service group. Is a lookup to an existing service group in ServiceMax</inlineHelpText>
        <label>Service Team</label>
        <referenceTo>SVMXC__Service_Group__c</referenceTo>
        <relationshipLabel>Technician/Equipment</relationshipLabel>
        <relationshipName>Service_Group_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service territory to which this technician belongs. Reference to an existing Territory record in ServiceMax</description>
        <label>Service Territory</label>
        <referenceTo>SVMXC__Territory__c</referenceTo>
        <relationshipLabel>Technician/Equipment</relationshipLabel>
        <relationshipName>Service_Group_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__State__c</fullName>
        <description>“State” part of the technician&apos;s address</description>
        <inlineHelpText>“State” part of the technician&apos;s address</inlineHelpText>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Street__c</fullName>
        <description>“Street” part of the technician&apos;s address</description>
        <inlineHelpText>“Street” part of the technician&apos;s address</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Third_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the technician is a salesforce user or third party vendor</description>
        <inlineHelpText>Indicates if the technician is a salesforce user or third party vendor</inlineHelpText>
        <label>Third Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Working_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Working Hours applicable to the technician. Reference to an existing Business Hours record in Salesforce</description>
        <label>Working Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Technician/Equipment (Working Hours)</relationshipLabel>
        <relationshipName>Service_Group_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Zip__c</fullName>
        <description>“Zip code” part of the technician&apos;s address</description>
        <inlineHelpText>“Zip code” part of the technician&apos;s address</inlineHelpText>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Technician/Equipment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Service_Group__c</columns>
        <columns>SVMXC__Service_Territory__c</columns>
        <columns>SMAX_PS_Segment__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technician/Equipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SMAX_PS_Restrict_Editable_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR($Profile.Name = &quot;ServiceMax Admin&quot;,
								$Profile.Name = &quot;ServiceMax Background User&quot;,
								$Profile.Name = &quot;ServiceMax Partners&quot;,
								$Profile.Name = &quot;ServiceMax User&quot;
							
							),
				
	 ISPICKVAL(SMAX_PS_Category__c, &apos;Technician&apos;),
    OR( ISCHANGED(Name),
							ISCHANGED(SVMXC__Active__c),
							ISCHANGED(SVMXC__Service_Group__c),
							ISCHANGED(SVMXC__Service_Territory__c),
							ISCHANGED(SVMXC__Enable_Scheduling__c),
							ISCHANGED(SMAX_PS_Category__c),
							ISCHANGED(SMAX_PS_Segment__c),
							ISCHANGED(SVMXC__Salesforce_User__c),
							ISCHANGED(SVMXC__Role__c),
							ISCHANGED(SVMXC__Third_Party__c),
							ISCHANGED(SMAX_PS_Office_Extenstion__c),
							ISCHANGED(SVMXC__Phone__c)
							
						) 				  
			
			)</errorConditionFormula>
        <errorMessage>You are restricted from updating the fields except Mobile Phone, Mobile Email and Member Information</errorMessage>
    </validationRules>
</CustomObject>